--- a/01-css-methods/index.html
+++ b/01-css-methods/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>css practice num 1</title>
     <link rel="stylesheet" href = "mystyles.css">
-</head>
-<body>
-    <p>This is external css applied.</p>
+
+    <style>
+
+        p
+        {
+            color: white;
+            background-color: green;
+            font-size: 18px;
+        }
     
+    </style>
+
+</head>
+
+<body>
+    <div>This is external css applied.</div>
+
+    <p>This is internal css applied.</p>
+
+    <button style = "background-color: orange; font-size: 18px;">
+    <button>This is inline css applied.</button>
+</div>
 </body>
 </html>
